[package]
name = "rust-blas"
version = "0.1.1"
authors = ["Michael Yang <mikkyangg@gmail.com>", "Bernhard Schuster <bernhard@ahoi.io>"]
description = "BLAS bindings and wrappers, fork of rblas"
documentation = "http://mikkyang.github.io/rust-blas/doc/rblas/index.html"
homepage = "http://github.com/spearo/rust-blas"
repository = "http://github.com/spearow/rust-blas"
readme = "README.md"
keywords = ["BLAS"]
license = "MIT"
build = "build.rs"

[dependencies]
num = { version = "0.1", default-features = false, features = ["complex"] }
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
