[workspace]
members = [
		"greenglas", "coaster", "coaster-nn", "coaster-blas", "juice", "rust-blas",
		"rcudnn/cudnn", "rcudnn/cudnn-sys", "rcublas/cublas", "rcublas/cublas-sys",
#		"juice-examples/juice-utils", "juice-examples/mackey-glass-rnn-regression",
		"juice-examples/mnist-image-multiclass-classification"]

exclude = [ "./rcudnn", "./rcublas", "./juice-examples"]

[patch.crates-io]
coaster-nn = { path = "./coaster-nn" }
coaster-blas = { path = "./coaster-blas" }
coaster = { path = "./coaster" }
greenglas = { path = "./greenglas" }
juice = { path = "./juice" }
rust-blas = { path = "./rust-blas" }
rcublas = { path = "./rcublas/cublas" }
rcublas-sys = { path = "./rcublas/cublas-sys" }
rcudnn = { path = "./rcudnn/cudnn" }
rcudnn-sys = { path = "./rcudnn/cudnn-sys" }

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
