[package]
name = "coaster-blas"
description = "Coaster library for full BLAS support"
version = "0.3.0"
edition = "2018"
authors = [
    "Bernhard Schuster <bernhard@ahoi.io>",
    "Michael Hirn <mj@autumnai.com>",
    "Maximilian Goisser <max@autumnai.com>"
]
repository = "https://github.com/spearow/coaster-blas"
homepage = "https://spearow.io/projects/coaster-blas"
documentation = "https://spearow.github.com/coaster-blas"
readme = "README.md"
keywords = ["blas", "coaster", "computation", "hpc", "plugin"]
license = "MIT OR Apache-2.0"

[dependencies]
coaster = { version = "0.1",  path = "../coaster", default-features = false }
lazy_static = "1"
log = "0.4"

# native
rust-blas = { version = "^0.1", path = "../rust-blas", optional = true }
# cuda
rcublas = { version = "0.4", path = "../rcublas/cublas", optional = true }
spin = { version = "0.5", optional = true }
clippy = { version = "0.0.302", optional = true }

[dev-dependencies]

[features]
default = ["native", "cuda"]
native = ["coaster/native", "rust-blas"]
cuda = ["coaster/cuda", "rcublas", "spin"]
opencl = ["coaster/opencl"]
travis = ["native"]
dev = []
lint = ["clippy"]
