[package]
name = "coaster-blas"
description = "Coaster library for full BLAS support"
version = "0.4.0"
authors = [
    "Bernhard Schuster <bernhard@ahoi.io>",
    "Lissa Hyacinth <lissahyacinth@gmail.com>",
    "Paul Kassianik <pkassianik@gmail.com>",
    "Michael Hirn",
    "Maximilian Goisser",
]
repository = "https://github.com/spearow/coaster-blas"
homepage = "https://spearow.io/projects/coaster-blas"
documentation = "https://spearow.github.com/coaster-blas"
readme = "README.md"
keywords = ["blas", "coaster", "computation", "hpc", "plugin"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
coaster = { version = "0.2.0", path = "../coaster", default-features = false }
log = "0.4"
# native
rust-blas = { version = "0.2.0", path = "../rust-blas", optional = true }
# cuda
rcublas = { version = "0.6.0", path = "../rcublas/cublas", optional = true }

[dev-dependencies]

[features]
default = ["native", "cuda"]
native = ["coaster/native", "rust-blas"]
cuda = ["coaster/cuda", "rcublas"]
opencl = ["coaster/opencl"]
