[package]
name = "coaster-nn"
description = "coaster plugin providing Neural Network operations"
version = "0.4.2"
authors = [
	"Bernhard Schuster <bernhard@ahoi.io>",
	"Lissa Hyacinth <lissahyacinth@gmail.com>",
	"Michael Hirn",
	"Maximilian Goisser",
]
repository = "https://github.com/spearow/coaster-nn"
homepage = "https://spearow.io/coaster-nn"
documentation = "https://spearow.io/projects/coaster-nn/documentation"
readme = "README.md"
keywords = ["neural-network", "coaster", "computation", "hpc", "plugin"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
coaster = { version = "0.1", default-features = false }
rcudnn = { version = "1.7", optional = true }
libc = "0.2"
log = "0.4"
rand = { version = "0.8", optional = true }
rand_chacha = "0.3.0"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.8"
num = "0.4"

[features]
default = ["native", "cuda"]
native = ["coaster/native", "rand"]
cuda = ["coaster/cuda", "rcudnn"]
opencl = ["coaster/opencl"]
unstable = []
