[package]
name = "coaster-nn"
description = "coaster plugin providing Neural Network operations"
version = "0.5.0"
authors = [
	"Bernhard Schuster <bernhard@ahoi.io>",
	"Lissa Hyacinth <lissahyacinth@gmail.com>",
	"Michael Hirn",
	"Maximilian Goisser",
]
repository = "https://github.com/spearow/coaster-nn"
homepage = "https://spearow.io/coaster-nn"
documentation = "https://spearow.io/projects/coaster-nn/documentation"
readme = "README.md"
keywords = ["neural-network", "coaster", "computation", "hpc", "plugin"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
coaster = { path = "../coaster", default-features = false }
rcudnn = { version = "1.7", optional = true }
libc = { version = "0.2", optional = true }
log = "0.4"
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3.0", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.9"
num = "0.4"

[features]
default = ["native", "cuda"]
native = ["coaster/native", "rand", "rand_chacha"]
cuda = ["coaster/cuda", "rcudnn", "libc", "thiserror", "rand_chacha"]
opencl = ["coaster/opencl"]
unstable = []
