[package]
name          = "coaster"
description   = "high-performance computation on any hardware"
version       = "0.1.0"
authors       = ["Bernhard Schsuter <bernhard@ahoi.io>",
                 "Michael Hirn <mj@autumnai.com>",
                 "Maximilian Goisser <max@autumnai.com>"]

repository    = "https://github.com/spearow/coaster"
homepage      = "https://spearow.io/projects/coaster"
documentation = "https://spearow.github.io/coaster"
readme        = "README.md"

keywords      = ["backend", "computation", "opencl", "cuda", "hpc"]
license       = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
bitflags = "1"
enum_primitive = "0.1"
byteorder = "1"
num = "0.2"
lazy_static = "1"
regex = "1"

clippy = { version = "0.0", optional = true }
compiletest_rs = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.7"
coaster-nn = { version = "0.4" }
serial_test = "0.4"

[features]
default = ["native", "cuda"]
native = []
cuda = []
opencl = []

unstable_alloc = [] # faster but unstable memory allocation on native machines

dev = []
unstable = ["compiletest_rs"] # for travis-cargo
travis = ["native"]
lint = ["clippy"]