[package]
name = "coaster"
description = "high-performance computation on any hardware"
version = "0.2.0"
authors = [
    "Bernhard Schuster <bernhard@ahoi.io>",
    "Lissa Hyacinth <lissahyacinth@gmail.com>",
    "Michael Hirn",
    "Maximilian Goisser",
]
edition = "2018"
repository = "https://github.com/spearow/coaster"
homepage = "https://spearow.io/projects/coaster"
documentation = "https://spearow.github.io/coaster"
readme = "README.md"
keywords = ["backend", "computation", "opencl", "cuda", "hpc"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
bitflags = "1"
enum_primitive = "0.1"
byteorder = "1"
num = "0.4"
lazy_static = "1"
thiserror = "1.0"
rcudnn = { version = "1.7", path = "../rcudnn/cudnn", optional = true }
rcublas = { version = "0.6.0", path = "../rcublas/cublas", optional = true }

[dev-dependencies]
coaster-nn = { path = "../coaster-nn", default-features = false }
compiletest_rs = "0.7"

[features]
default = ["native"]
native = []
cuda = ["rcudnn", "rcublas"]
opencl = []
unstable_alloc = [] # faster but unstable memory allocation on native machines
