[package]
name = "cublas-sys"
version = "0.1.0"
authors = ["Maximilian Goisser <maximilian.goisser@autumnai.com>"]

repository      = "https://github.com/autumnai/rust-cublas"
homepage        = "https://github.com/autumnai/rust-cublas"
documentation   = "https://autumnai.github.io/rust-cublas"

keywords        = ["cublas", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cublas"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
