[package]
name = "cublas-sys"
description     = "FFI bindings to cuBLAS"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ratpoison.io>",
           "Maximilian Goisser <maximilian.goisser@autumnai.com>"]

repository      = "https://github.com/ratpoison-io/rust-cublas"
homepage        = "https://github.com/ratpoison-io/rust-cublas"
documentation   = "https://ratpoison.io/projects/rust-cublas"

keywords        = ["cublas", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cublas"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
