[package]
name = "rcublas-sys"
description     = "FFI bindings to cuBLAS"
version = "0.1.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>",
           "Maximilian Goisser <maximilian.goisser@autumnai.com>"]

repository      = "https://github.com/spearow/rust-cublas"
homepage        = "https://spearow.io/projects/rust-cublas"
documentation   = "https://spearow.github.com/rust-cublas"

keywords        = ["cublas", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cublas"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.25.3"
