[package]
name = "cublas"
description = "safe Rust wrapper for CUDA's cuBLAS"
version = "0.2.0"
authors = ["Bernhard Schuster <bernhard@ratpoison.io>",
	   "Maximilian Goisser <maximilian.goisser@autumnai.com>"]

repository      = "https://github.com/autumnai/rust-cublas"
homepage        = "https://github.com/autumnai/rust-cublas"
documentation   = "https://autumnai.github.io/rust-cublas"
readme          = "../README.md"

keywords        = ["cublas", "cuda", "nvidia", "blas"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
cublas-sys = { version = "0.1.0", path = "../cublas-sys" }

clippy = { version = "0.0.35", optional = true }

[dev-dependencies]
coaster = "0.1.0"

[features]
dev = []
travis = []
lint = ["clippy"]
