[package]
name = "rcublas"
description = "safe Rust wrapper for CUDA's cuBLAS"
version = "0.2.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>",
	   "Maximilian Goisser <maximilian.goisser@autumnai.com>"]

repository      = "https://github.com/spearow/rust-cublas"
homepage        = "https://spearow.io/projects/rust-cublas"
documentation   = "https://spearow.github.com/rust-cublas"
readme          = "../README.md"

keywords        = ["cublas", "cuda", "nvidia", "blas"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
rcublas-sys = { version = "0.1.1", path = "../cublas-sys" }

clippy = { version = "0.0.35", optional = true }

[dev-dependencies]
coaster = { path = "../../coaster", default-features = false, features = ["cuda", "native"], version = "0.1.0" }

[features]
dev = []
travis = []
lint = ["clippy"]
