[package]
name            = "cudnn-sys"
description     = "FFI bindings to cuDNN"
version         = "0.0.3"
authors         = ["Maximilian Goisser <max@autumnai.com>"]

repository      = "https://github.com/autumnai/rust-cudnn"
homepage        = "https://github.com/autumnai/rust-cudnn"
documentation   = "https://autumnai.github.io/rust-cudnn"

keywords        = ["cudnn", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cudnn"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
