[package]
name            = "cudnn"
description     = "safe Rust wrapper for CUDA's cuDNN"
version         = "1.2.0"
authors         = ["MichaelHirn <mj@autumnai.com>",
                   "Maximilian Goisser <max@autumnai.com>"]

repository      = "https://github.com/autumnai/rust-cudnn"
homepage        = "https://github.com/autumnai/rust-cudnn"
documentation   = "https://autumnai.github.io/rust-cudnn"
readme          = "../README.md"

keywords        = ["cudnn", "cuda", "nvidia", "neural-network"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
collenchyma = "0.0.8"
cudnn-sys = { version = "0.0.2", path = "../cudnn-sys" }

clippy = { version = "0.0.27", optional = true }

[features]
dev = []
travis = []
lint = ["clippy"]
