[package]
name            = "cudnn"
description     = "safe Rust wrapper for CUDA's cuDNN"
version         = "1.3.1"
authors         = ["MichaelHirn <mj@autumnai.com>",
                   "Maximilian Goisser <max@autumnai.com>"]

repository      = "https://github.com/autumnai/rust-cudnn"
homepage        = "https://github.com/autumnai/rust-cudnn"
documentation   = "https://autumnai.github.io/rust-cudnn"
readme          = "../README.md"

keywords        = ["cudnn", "cuda", "nvidia", "neural-network"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
cudnn-sys = { version = "0.0.3", path = "../cudnn-sys" }

clippy = { version = "0.0.27", optional = true }

[dev-dependencies]
collenchyma = { path = "../../collenchyma", default-features = false }

[features]
dev = []
travis = []
lint = ["clippy"]
