[package]
name            = "rcudnn"
description     = "safe Rust wrapper for CUDA's cuDNN"
version         = "1.5.0"
authors         = ["Bernhard Schuster <bernhard@ratpoison.io>",
                   "MichaelHirn <mj@autumnai.com>",
                   "Maximilian Goisser <max@autumnai.com>"]

repository      = "https://github.com/ratpoison-io/rust-cudnn"
homepage        = "https://github.com/ratpoison-io/rust-cudnn"
documentation   = "https://ratpoison.io/projects/rust-cudnn"
readme          = "../README.md"

keywords        = ["cudnn", "cuda", "nvidia", "neural-network"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
rcudnn-sys = { version = "0.1.0", path = "../cudnn-sys" }
num = "0.1.31"

clippy = { version = "0.0.27", optional = true }

[dev-dependencies]
coaster = "0.1.0"

[features]
dev = []
travis = []
lint = ["clippy"]
