[package]
name = "greenglas"
description = "Data Preprocessing library for Machine Learning"
authors = ["Bernhard Schuster <bernhard@ahoi.io>",
           "Michael Hirn <mj@autumnai.com>"]
version = "0.2.0"
repository = "https://github.com/spearow/greenglas"
homepage = "https://spearow.io/projects/greenglas"
documentation = "https://spearow.github.com/greenglas"
readme = "README.md"
keywords = ["preprocessing", "data-preprocessing", "transformation", "encoding", "machine-learning"]
license = "MIT OR Apache-2.0"

[dependencies]
coaster = { version = "0.1", default-features = false, features = ["native"] } # native feature to read/write data into tensors

image = "0.23"
murmurhash3 = "0.0.5"
modifier = "0.1"

[features]
default = ["native", "cuda"]
native = []
cuda = ["coaster/cuda"]
opencl = ["coaster/opencl"]
