[package]
name = "juice"
description = "Machine Learning Framework for Hackers"
version = "0.3.0"
authors = [
  "Bernhard Schuster <bernhard@ahoi.io>",
  "Lissa Hyacinth <lissahyacinth@gmail.com>",
  "Maximilian Goisser",
  "Michael Hirn",
]
repository = "https://github.com/spearow/juice"
# TODO get the website back on track
homepage = "https://github.com/spearow/juice"
#documentation = "https://spearow.github.io/juice"
readme = "README.md"
keywords = ["deep-learning", "neural-networks", "machine-learning", "framework"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[dependencies]
coaster = { default-features = false, version = "0.2.0", path = "../coaster" }
coaster-blas = { default-features = false, version = "0.4.0", path = "../coaster-blas" }
coaster-nn = { default-features = false, version = "0.5.0", path = "../coaster-nn" }

log = "0.4"
rand = "0.8"
num = "0.4"
capnp = "0.14"
timeit = "0.1"

[build-dependencies]
capnpc = "0.14"

[dev-dependencies]
env_logger = "0.9"

[features]
default = ["native", "cuda"]
native = ["coaster-blas/native", "coaster-nn/native"]
cuda = ["coaster/cuda", "coaster-blas/cuda", "coaster-nn/cuda"]
opencl = ["coaster/opencl", "coaster-blas/opencl", "coaster-nn/opencl"]
