[package]
name = "ptr-origin-tracker"
version = "0.2.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
keywords = ["pointer","ffi","helper"]
description = "A helper lib for validating memory pointers being passed around to FFI"
repository = "https://github.com/sparow/juice"
homepage = "https://github.com/spearow/juice/tree/master/ptr-origin-tracker"
license = "MIT OR Apache-2.0 OR CC-BY-4.0 OR BSD-4-Clause"
categories = ["development-tools::ffi"]

[dependencies]
log = "0.4"
paste = "0.1"
lazy_static = "1"