[package]

name = "linear-map"
version = "0.0.3"
license = "MIT/Apache-2.0"
description = "A map backed by a vector"
authors = [
    "Tobias Bucher <tobiasbucher5991@gmail.com>",
]

repository = "https://github.com/contain-rs/linear-map"
documentation = "https://contain-rs.github.io/linear-map/linear_map"
keywords = ["data-structures"]
readme = "README.md"

[features]
nightly = []
