[package]
name = "example-mnist-classification"
description = "MNIST Image Multiclass Classification example of Juice"
version = "0.0.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>",
           "Michael Hirn",
           "Maximilian Goisser"]
edition = "2018"
publish = false

[dependencies]
greenglas = { path = "../../greenglas" , version = "0.3.0"}
juice = { path = "../../juice", default-features = false , version = "0.3.0"}
coaster = { path = "../../coaster", default-features = false , version = "0.2.0"}
coaster-nn = { path = "../../coaster-nn", default-features = false , version = "0.5.0"}

juice-utils = {path = "../juice-utils"}

csv = "1"
hyper = "0.14"
hyper-rustls = "0.22"
futures = "0.3"
futures-util = "0.3"

tokio = "1"
flate2 = "1"
mnist = "0.4.0"

log = "0.4"
env_logger = "0.9"
timeit = "0.1.2"

docopt = "1"
serde = { version = "1", features = ["derive"] }


[features]
default = ["native", "cuda"]
native = ["juice/native", "coaster/native"]
opencl = ["juice/opencl", "coaster/opencl"]
cuda = ["juice/cuda", "coaster/cuda"]
