[package]
name = "rcublas-sys"
description     = "FFI bindings to cuBLAS"
version = "0.2.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>",
           "Maximilian Goisser <maximilian.goisser@autumnai.com>"]

homepage        = "https://github.com/spearow/juice/tree/master/rust-cublas"
repository      = "https://github.com/spearow/juice"

keywords        = ["cublas", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cublas"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.53"
