[package]
name = "rcublas-sys"
description = "FFI bindings to cuBLAS"
version = "0.5.0"
edition = "2018"
authors = [
    "Bernhard Schuster <bernhard@ahoi.io>",
    "Maximilian Goisser"
]
repository = "https://github.com/spearow/juice"
homepage = "https://github.com/spearow/juice/tree/master/rcublas/cublas-sys"
keywords = ["cublas", "cuda", "nvidia", "sys"]
license = "MIT OR Apache-2.0"
links = "cublas"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = { version = "^0.59.1", optional = true }

[features]
default = []
generate = ["bindgen"]
