[package]
name = "rcublas"
description = "safe Rust wrapper for CUDA's cuBLAS"
version = "0.4.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>",
	   "Maximilian Goisser <maximilian.goisser@autumnai.com>"]

homepage      = "https://github.com/spearow/juice/tree/masster/rust-cublas"
repository    = "https://github.com/spearow/juice"
readme        = "../README.md"

keywords        = ["cublas", "cuda", "nvidia", "blas"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
rcublas-sys = { version = "0.2" }

clippy = { version = "0.0.302", optional = true }

[dev-dependencies]
coaster = { path = "../../coaster", default-features = false, features = ["cuda", "native"] }

[features]
dev = []
travis = []
lint = ["clippy"]
