[package]
name = "rcuda-ffi-sys"
description = "Rust FFI to CUDA Utility Code"
version = "0.1.0"
edition = "2018"
authors = [
    "Lissa Hyacinth <lissahyacinth@gmail.com>"
]
repository = "https://github.com/spearow/juice"
homepage = "https://github.com/spearow/juice/tree/master/rcuda-ffi/rcuda-ffi-sys"
keywords = ["cuda", "nvidia", "neural-network"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
libc = "0.2"
cc = {git = "https://github.com/lissahyacinth/cc-rs"}

[build-dependencies]
pkg-config = "*"
cc = {git = "https://github.com/lissahyacinth/cc-rs"}

[dev-dependencies]
coaster = { default-features = false, features = ["native", "cuda"], version = "0.1" }