[package]
name            = "rcudnn-sys"
description     = "FFI bindings to cuDNN"
version         = "0.2.0"
authors         = ["Bernhard Schuster <bernhard@ahoi.io>",
                   "Maximilian Goisser <max@autumnai.com>"]

repository      = "https://github.com/spearow/rust-cudnn"
homepage        = "https://spearow.io/projects/rust-cudnn"
documentation   = "https://spearow.github.com/rust-cudnn"

keywords        = ["cudnn", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cudnn"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.52"
